# opXRD

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: unittests.yml  wf.yml
opxrd/: analyser.ipynb  analyser.py  analysis.py  database.py  download.py  fourier.ipynb  plots.ipynb  test.ipynb  usage.ipynb
opxrd/analysis/: __init__.py  fingerprints.py  plot.py  plotter.py  tables.py  tools.py  visualization.py
opxrd/database/: __init__.py  opxrd.py
opxrd/submission_helper/: requirements.txt  versioned_req.txt
opxrd/wrapper/: opxrd.py  tracked_int.py
processors/: contribs.py  opxrd.py
processors/internal/: csv_label.py  final.py  module_inspector.py
tests/: t_download.py
