[project]
name = "opxrd"
version = "0.1.0"
authors = [{name = "Daniel Hollarek", email = "daniel.hollarek@googlemail.com"}]
description = "Python API for opXRD database. See more at https://xrd.aimat.science/"
dependencies = [
    "xrdpattern==0.9.7",
    "scikit-learn==1.6.1",
    "numpy==1.26.4",
    "requests==2.32.3",
    "pandas==2.2.3",
    "matplotlib==3.10.0",
    "ase==3.25.0",
    "ipython==9.0.1",
    "tabulate==0.9.0",
    "progressbar2==4.5.0",
    "pymatgen==2024.8.9"
]

[tool.setuptools.packages.find]
include = ["opxrd*"]
